--- a/index.html
+++ b/index.html
@@ -20,24 +20,69 @@
     <!--    <p>利用惯性数据进行定位计算</p>-->
 </div>
 
-<div class="container" style="width:100%;height:90vh">
-    <div id="content">
-        <div id="sphere"></div>
-        <ul>
-            <h3>加速度计数据：</h3>
-            <li>acceleration x: <span id="accelerationX"></span> m/s^2</li>
-            <li>acceleration y: <span id="accelerationY"></span> m/s^2</li>
-            <li>acceleration z: <span id="accelerationZ"></span> m/s^2</li>
-            <h3>陀螺仪数据：</h3>
-            <li>rotation alpha: <span id="rotationAlpha"></span> degree</li>
-            <li>rotation beta: <span id="rotationBeta"></span> degree</li>
-            <li>rotation gamma: <span id="rotationGamma"></span> degree</li>
-            <h3>时间：</h3>
-            <li>时间戳：<span id="time"></span> ms</li>
-        </ul>
-    </div>
+<div class="container" style="width:100%;height:40vh">
+    <table class="table table-responsive">
+<!--        <caption>表格</caption>-->
+        <thead class="w-100">
+        <tr class="text-center">
+            <th class="col-3">名称</th>
+            <th class="col-3">X</th>
+            <th class="col-3">Y</th>
+            <th class="col-3">Z</th>
+            <th class="col-3">操作</th>
+        </tr>
+        </thead>
+        <tbody class="w-100">
+        <tr class="text-center">
+            <td class="col-3">初始高度</td>
+<!--            <td><textarea class="form-control" type="text"  rows="2" readonly>初始高度</textarea></td>-->
+            <td class="col-3"></td>
+            <td class="col-3"></td>
+            <td class="col-3"><input id="beginHeight" type="text" class="form-control"></td>
+            <td class="col-3"><a href="#" class="btn btn-info btn-xs" id="setHeight" style="padding: 0;">设置</a></td>
+        </tr>
+        <tr class="text-center">
+            <td class="col-3">布设目标</td>
+            <td class="col-3"><input id="targetX" type="text" class="form-control"></td>
+            <td class="col-3"><input id="targetY" type="text" class="form-control"></td>
+            <td class="col-3"><input id="targetZ" type="text" class="form-control"></td>
+            <td class="col-3"><a href="#" class="btn btn-info btn-xs" id="setTarget" style="padding: 0;">设置</a></td>
+        </tr>
+        <tr class="text-center">
+            <td class="col-3">当前坐标</td>
+            <td class="col-3"><input id="currentX" type="text" class="form-control"></td>
+            <td class="col-3"><input id="currentY" type="text" class="form-control"></td>
+            <td class="col-3"><input id="currentZ" type="text" class="form-control"></td>
+            <td class="col-3"></td>
+        </tr>
+        <tr class="text-center">
+            <td class="col-3">调整量</td>
+            <td class="col-3"><input id="deltaX" type="text" class="form-control"></td>
+            <td class="col-3"><input id="deltaY" type="text" class="form-control"></td>
+            <td class="col-3"><input id="deltaZ" type="text" class="form-control"></td>
+            <td class="col-3"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="container" style="width:100%;height:50vh">
+<!--    <div id="content">-->
+<!--        <div id="sphere"></div>-->
+<!--        <ul>-->
+<!--            <h3>加速度计数据：</h3>-->
+<!--            <li>acceleration x: <span id="accelerationX"></span> m/s^2</li>-->
+<!--            <li>acceleration y: <span id="accelerationY"></span> m/s^2</li>-->
+<!--            <li>acceleration z: <span id="accelerationZ"></span> m/s^2</li>-->
+<!--            <h3>陀螺仪数据：</h3>-->
+<!--            <li>rotation alpha: <span id="rotationAlpha"></span> degree</li>-->
+<!--            <li>rotation beta: <span id="rotationBeta"></span> degree</li>-->
+<!--            <li>rotation gamma: <span id="rotationGamma"></span> degree</li>-->
+<!--            <h3>时间：</h3>-->
+<!--            <li>时间戳：<span id="time"></span> ms</li>-->
+<!--        </ul>-->
+<!--    </div>-->
     <div class="panel panel-default">
-        <div class="panel-body" id="main" style="width:100%;height:85vh"></div>
+        <div class="panel-body" id="main" style="width:100%;height:45vh"></div>
         <div class="container"  style="width:100%;height:5vh">
             <div class="btn-group btn-group-justified" style="width:100%">
                 <a href="#" class="btn btn-success" id="start">开始</a>
