--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 var rotationGamma = e.rotationRate.gamma.toFixed(fixed);
                 var timeNow = Date.now();
 
-                document.getElementById("accelerationX").innerHTML = accelerationX;
-                document.getElementById("accelerationY").innerHTML = accelerationY;
-                document.getElementById("accelerationZ").innerHTML = accelerationZ;
-                document.getElementById("rotationAlpha").innerHTML = rotationAlpha;
-                document.getElementById("rotationBeta").innerHTML = rotationBeta;
-                document.getElementById("rotationGamma").innerHTML = rotationGamma;
-                document.getElementById("time").innerHTML = timeNow - startTime;
+                // document.getElementById("accelerationX").innerHTML = accelerationX;
+                // document.getElementById("accelerationY").innerHTML = accelerationY;
+                // document.getElementById("accelerationZ").innerHTML = accelerationZ;
+                // document.getElementById("rotationAlpha").innerHTML = rotationAlpha;
+                // document.getElementById("rotationBeta").innerHTML = rotationBeta;
+                // document.getElementById("rotationGamma").innerHTML = rotationGamma;
+                // document.getElementById("time").innerHTML = timeNow - startTime;
 
                 CalPath.insert( { id: idNow, time: timeNow - startTime,
                     ax: accelerationX, ay: accelerationY, az: accelerationZ,
