--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     <title>基于手机传感器的实验目标布设</title>
 </head>
 <body>
-<div class="jumbotron" style="width:100%;max-height:10vh;padding: 2rem 1rem;margin-bottom:0">
+<div class="jumbotron" style="width:100%;max-height:10vh;padding: 2rem 1rem;margin-bottom:0"> 
     <h4>基于手机传感器的实验目标布设</h4>
     <!--    <p>利用惯性数据进行定位计算</p>-->
 </div>
 
 <div class="container" style="width:100%;height:50vh">
+    <!-- 表格响应式布局 -->
     <div class="table-responsive">
         <table class="table text-nowrap">
             <!--        <caption>表格</caption>-->
             <thead>
             <tr class="text-center">
-                <th>名称</th>
+                <th>名称</th>   
                 <th>X</th>
                 <th>Y</th>
                 <th>Z</th>
@@ -97,12 +98,12 @@
 <script type="text/javascript">
     var db = new loki('db');  // 新建数据库 db
     var CalPath = db.addCollection('CalPath');  // 新建表 CalPath
-    var recordData = false;  // 判断是否需要记录数据
+    var recordData = false;  // 判断是否需要记录数据，true记录，false不记录
     var startTime = 0;  // 开始记录数据时的时间戳
     var fixed = 6;  // 传感器数据位数
     var idNow = 1;  // 数据唯一标识
-    var numberPre = 50;  // 需要使用前多少个数据
-    var numberPost = 50;  // 需要使用后多少个数据
+    var numberPre = 50;  // 需要使用前面多少个数据
+    var numberPost = 50;  // 需要使用后面多少个数据
 
     // 获取传感器数据
     if (window.DeviceMotionEvent) {
@@ -127,9 +128,6 @@
                 CalPath.insert( { id: idNow, time: timeNow - startTime,
                     ax: accelerationX, ay: accelerationY, az: accelerationZ,
                     wx: rotationAlpha, wy: rotationBeta, wz: rotationGamma,
-                    vx: 0, vy: 0, vz: 0,
-                    sx: 0, sy: 0, sz: 0,
-                    used: false, calculated: false
                 } );
 
                 if(idNow >= (numberPre + 1 + numberPost)){
